[tool.poetry]
name = "aioldap3"
version = "1.0"
description = "New generation of async ldap3 client wrapper"
authors = ["Mastermind-U <rex49513@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/MultifactorLab/aioldap3"
repository = "https://github.com/MultifactorLab/aioldap3"
include = [
    "LICENSE",
]
maintainers = ['MultifactorLab', 'Mastermind-U']

[tool.poetry.dependencies]
python = "^3.8.1"
ldap3 = "^2.9.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8-awesome = "^1.3.0"
mypy = "^1.9.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
flake8-commas = "^2.1.0"
flake8-docstrings = "^1.7.0"
flake8-pytest = "^1.4"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
coverage = "^7.4.4"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aioldap3 = ':aioldap3'

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
show_column_numbers = true
pretty = true
warn_unreachable = true
color_output = true
warn_unused_ignores = true
no_implicit_reexport = true
disallow_any_generics = true
